// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PatternEngine $react should work with full words 1`] = `
{
  "engine": {
    "patterns": "!$react John
spam
",
    "settings": {},
  },
  "results": [
    {
      "hide": {
        "kind": "show",
        "reason": "Reacted by user: John",
      },
      "testCase": {
        "reactedByName": "John Doe",
        "text": "This is spam",
      },
    },
    {
      "hide": {
        "kind": "show",
        "reason": "Reacted by user: John",
      },
      "testCase": {
        "reactedByName": "John Doe",
        "text": "This is fine",
      },
    },
    {
      "hide": {
        "kind": "hide",
        "reason": "Matches pattern: spam",
      },
      "testCase": {
        "reactedByName": "Mary Sue",
        "text": "This is also spam",
      },
    },
    {
      "hide": {
        "kind": "nothing",
      },
      "testCase": {
        "reactedByName": "Mary Sue",
        "text": "This is also fine",
      },
    },
    {
      "hide": {
        "kind": "hide",
        "reason": "Matches pattern: spam",
      },
      "testCase": {
        "text": "This is also also spam",
      },
    },
    {
      "hide": {
        "kind": "nothing",
      },
      "testCase": {
        "text": "This is also also fine",
      },
    },
  ],
}
`;

exports[`PatternEngine $react should work with regex 1`] = `
{
  "engine": {
    "patterns": "!$react /u/i
spam
",
    "settings": {},
  },
  "results": [
    {
      "hide": {
        "kind": "hide",
        "reason": "Matches pattern: spam",
      },
      "testCase": {
        "reactedByName": "John Doe",
        "text": "This is spam",
      },
    },
    {
      "hide": {
        "kind": "nothing",
      },
      "testCase": {
        "reactedByName": "John Doe",
        "text": "This is fine",
      },
    },
    {
      "hide": {
        "kind": "show",
        "reason": "Reacted by user: /u/i",
      },
      "testCase": {
        "reactedByName": "Mary Sue",
        "text": "This is also spam",
      },
    },
    {
      "hide": {
        "kind": "show",
        "reason": "Reacted by user: /u/i",
      },
      "testCase": {
        "reactedByName": "Mary Sue",
        "text": "This is also fine",
      },
    },
    {
      "hide": {
        "kind": "hide",
        "reason": "Matches pattern: spam",
      },
      "testCase": {
        "text": "This is also also spam",
      },
    },
    {
      "hide": {
        "kind": "nothing",
      },
      "testCase": {
        "text": "This is also also fine",
      },
    },
  ],
}
`;

exports[`PatternEngine allow patterns (! prefix) should allow entries matching patterns with ! prefix 1`] = `
{
  "engine": {
    "patterns": "!important
spam",
    "settings": {},
  },
  "results": [
    {
      "hide": {
        "kind": "hide",
        "reason": "Matches pattern: spam",
      },
      "testCase": {
        "text": "This is spam",
      },
    },
    {
      "hide": {
        "kind": "show",
        "reason": "Matches pattern: important",
      },
      "testCase": {
        "text": "This is important spam",
      },
    },
    {
      "hide": {
        "kind": "show",
        "reason": "Matches pattern: important",
      },
      "testCase": {
        "text": "This is important",
      },
    },
  ],
}
`;

exports[`PatternEngine allow patterns (! prefix) should allow entries matching regex patterns with ! prefix 1`] = `
{
  "engine": {
    "patterns": "!/important.*/
/spam/",
    "settings": {},
  },
  "results": [
    {
      "hide": {
        "kind": "hide",
        "reason": "Matches pattern: /spam/",
      },
      "testCase": {
        "text": "spam message",
      },
    },
    {
      "hide": {
        "kind": "show",
        "reason": "Matches pattern: /important.*/",
      },
      "testCase": {
        "text": "important spam message",
      },
    },
    {
      "hide": {
        "kind": "show",
        "reason": "Matches pattern: /important.*/",
      },
      "testCase": {
        "text": "important announcement",
      },
    },
  ],
}
`;

exports[`PatternEngine allow patterns (! prefix) should exit early on first match (allow or deny) 1`] = `
{
  "engine": {
    "patterns": "spam
!spam",
    "settings": {},
  },
  "results": [
    {
      "hide": {
        "kind": "hide",
        "reason": "Matches pattern: spam",
      },
      "testCase": {
        "text": "This is spam",
      },
    },
  ],
}
`;

exports[`PatternEngine basic pattern matching should handle multiple patterns on separate lines 1`] = `
{
  "engine": {
    "patterns": "spam
advertisement
promotion",
    "settings": {},
  },
  "results": [
    {
      "hide": {
        "kind": "hide",
        "reason": "Matches pattern: spam",
      },
      "testCase": {
        "text": "This is spam",
      },
    },
    {
      "hide": {
        "kind": "hide",
        "reason": "Matches pattern: advertisement",
      },
      "testCase": {
        "text": "Check out this advertisement",
      },
    },
    {
      "hide": {
        "kind": "hide",
        "reason": "Matches pattern: promotion",
      },
      "testCase": {
        "text": "Special promotion today",
      },
    },
    {
      "hide": {
        "kind": "nothing",
      },
      "testCase": {
        "text": "Normal post",
      },
    },
  ],
}
`;

exports[`PatternEngine basic pattern matching should hide entries matching a simple word pattern 1`] = `
{
  "engine": {
    "patterns": "spam",
    "settings": {},
  },
  "results": [
    {
      "hide": {
        "kind": "hide",
        "reason": "Matches pattern: spam",
      },
      "testCase": {
        "text": "This is spam content",
      },
    },
    {
      "hide": {
        "kind": "nothing",
      },
      "testCase": {
        "text": "This is legitimate content",
      },
    },
  ],
}
`;

exports[`PatternEngine comment and empty line handling should ignore comment lines starting with ; 1`] = `
{
  "engine": {
    "patterns": "; This is a comment
spam
; Another comment
advertisement",
    "settings": {},
  },
  "results": [
    {
      "hide": {
        "kind": "hide",
        "reason": "Matches pattern: spam",
      },
      "testCase": {
        "text": "This is spam",
      },
    },
    {
      "hide": {
        "kind": "nothing",
      },
      "testCase": {
        "text": "; This is a comment",
      },
    },
  ],
}
`;

exports[`PatternEngine comment and empty line handling should ignore empty lines 1`] = `
{
  "engine": {
    "patterns": "spam

advertisement

",
    "settings": {},
  },
  "results": [
    {
      "hide": {
        "kind": "hide",
        "reason": "Matches pattern: spam",
      },
      "testCase": {
        "text": "This is spam",
      },
    },
    {
      "hide": {
        "kind": "hide",
        "reason": "Matches pattern: advertisement",
      },
      "testCase": {
        "text": "This is advertisement",
      },
    },
  ],
}
`;

exports[`PatternEngine comment and empty line handling should trim whitespace from patterns 1`] = `
{
  "engine": {
    "patterns": "spam  
advertisement  ",
    "settings": {},
  },
  "results": [
    {
      "hide": {
        "kind": "hide",
        "reason": "Matches pattern: spam",
      },
      "testCase": {
        "text": "This is spam",
      },
    },
    {
      "hide": {
        "kind": "hide",
        "reason": "Matches pattern: advertisement",
      },
      "testCase": {
        "text": "This is advertisement",
      },
    },
  ],
}
`;

exports[`PatternEngine complex scenarios should handle combination of patterns and settings 1`] = `
{
  "engine": {
    "patterns": "!important
spam
advertisement",
    "settings": {
      "hideContentCredentials": true,
      "hideSuggested": true,
    },
  },
  "results": [
    {
      "hide": {
        "kind": "hide",
        "reason": "Matches pattern: spam",
      },
      "testCase": {
        "text": "spam post",
      },
    },
    {
      "hide": {
        "kind": "show",
        "reason": "Matches pattern: important",
      },
      "testCase": {
        "text": "important spam",
      },
    },
    {
      "hide": {
        "kind": "hide",
        "reason": "Matches pattern: advertisement",
      },
      "testCase": {
        "text": "advertisement here",
      },
    },
    {
      "hide": {
        "kind": "hide",
        "reason": "Post is suggested",
      },
      "testCase": {
        "suggested": true,
        "text": "normal post",
      },
    },
    {
      "hide": {
        "kind": "hide",
        "reason": "Post contains content credentials",
      },
      "testCase": {
        "hasContentCredentials": true,
        "text": "normal post",
      },
    },
    {
      "hide": {
        "kind": "nothing",
      },
      "testCase": {
        "text": "normal post",
      },
    },
  ],
}
`;

exports[`PatternEngine complex scenarios should handle empty pattern list 1`] = `
{
  "engine": {
    "patterns": "",
    "settings": {},
  },
  "results": [
    {
      "hide": {
        "kind": "nothing",
      },
      "testCase": {
        "text": "any content",
      },
    },
  ],
}
`;

exports[`PatternEngine complex scenarios should handle pattern list with only comments and empty lines 1`] = `
{
  "engine": {
    "patterns": "; Comment 1

; Comment 2

",
    "settings": {},
  },
  "results": [
    {
      "hide": {
        "kind": "nothing",
      },
      "testCase": {
        "text": "any content",
      },
    },
  ],
}
`;

exports[`PatternEngine complex scenarios should match literal word patterns case-insensitively by default 1`] = `
{
  "engine": {
    "patterns": "spam",
    "settings": {},
  },
  "results": [
    {
      "hide": {
        "kind": "hide",
        "reason": "Matches pattern: spam",
      },
      "testCase": {
        "text": "spam",
      },
    },
    {
      "hide": {
        "kind": "hide",
        "reason": "Matches pattern: spam",
      },
      "testCase": {
        "text": "SPAM",
      },
    },
    {
      "hide": {
        "kind": "hide",
        "reason": "Matches pattern: spam",
      },
      "testCase": {
        "text": "Spam",
      },
    },
  ],
}
`;

exports[`PatternEngine complex scenarios should support case-insensitive matching with regex flag 1`] = `
{
  "engine": {
    "patterns": "/spam/i",
    "settings": {},
  },
  "results": [
    {
      "hide": {
        "kind": "hide",
        "reason": "Matches pattern: /spam/i",
      },
      "testCase": {
        "text": "spam",
      },
    },
    {
      "hide": {
        "kind": "hide",
        "reason": "Matches pattern: /spam/i",
      },
      "testCase": {
        "text": "SPAM",
      },
    },
    {
      "hide": {
        "kind": "hide",
        "reason": "Matches pattern: /spam/i",
      },
      "testCase": {
        "text": "Spam",
      },
    },
  ],
}
`;

exports[`PatternEngine regex pattern matching should handle invalid regex patterns gracefully 1`] = `
{
  "engine": {
    "patterns": "/[invalid/",
    "settings": {},
  },
  "results": [
    {
      "hide": {
        "kind": "nothing",
      },
      "testCase": {
        "text": "some text",
      },
    },
  ],
}
`;

exports[`PatternEngine regex pattern matching should support regex flags 1`] = `
{
  "engine": {
    "patterns": "/SPAM/i",
    "settings": {},
  },
  "results": [
    {
      "hide": {
        "kind": "hide",
        "reason": "Matches pattern: /SPAM/i",
      },
      "testCase": {
        "text": "This is SPAM",
      },
    },
    {
      "hide": {
        "kind": "hide",
        "reason": "Matches pattern: /SPAM/i",
      },
      "testCase": {
        "text": "This is spam",
      },
    },
    {
      "hide": {
        "kind": "hide",
        "reason": "Matches pattern: /SPAM/i",
      },
      "testCase": {
        "text": "This is SpAm",
      },
    },
  ],
}
`;

exports[`PatternEngine regex pattern matching should support regex patterns with forward slashes 1`] = `
{
  "engine": {
    "patterns": "/sp[ae]m/",
    "settings": {},
  },
  "results": [
    {
      "hide": {
        "kind": "hide",
        "reason": "Matches pattern: /sp[ae]m/",
      },
      "testCase": {
        "text": "This is spam",
      },
    },
    {
      "hide": {
        "kind": "hide",
        "reason": "Matches pattern: /sp[ae]m/",
      },
      "testCase": {
        "text": "This is spem",
      },
    },
    {
      "hide": {
        "kind": "nothing",
      },
      "testCase": {
        "text": "This is spim",
      },
    },
  ],
}
`;

exports[`PatternEngine settings integration should hide content with credentials when hideContentCredentials is true 1`] = `
{
  "engine": {
    "patterns": "",
    "settings": {
      "hideContentCredentials": true,
    },
  },
  "results": [
    {
      "hide": {
        "kind": "hide",
        "reason": "Post contains content credentials",
      },
      "testCase": {
        "hasContentCredentials": true,
        "text": "Normal content",
      },
    },
    {
      "hide": {
        "kind": "nothing",
      },
      "testCase": {
        "hasContentCredentials": false,
        "text": "Normal content",
      },
    },
  ],
}
`;

exports[`PatternEngine settings integration should hide suggested content when hideSuggested is true 1`] = `
{
  "engine": {
    "patterns": "",
    "settings": {
      "hideSuggested": true,
    },
  },
  "results": [
    {
      "hide": {
        "kind": "hide",
        "reason": "Post is suggested",
      },
      "testCase": {
        "suggested": true,
        "text": "Normal content",
      },
    },
    {
      "hide": {
        "kind": "nothing",
      },
      "testCase": {
        "suggested": false,
        "text": "Normal content",
      },
    },
  ],
}
`;

exports[`PatternEngine settings integration should not hide content with credentials when hideContentCredentials is false 1`] = `
{
  "engine": {
    "patterns": "",
    "settings": {
      "hideContentCredentials": false,
    },
  },
  "results": [
    {
      "hide": {
        "kind": "nothing",
      },
      "testCase": {
        "hasContentCredentials": true,
        "text": "Normal content",
      },
    },
  ],
}
`;

exports[`PatternEngine settings integration should not hide suggested content when hideSuggested is false 1`] = `
{
  "engine": {
    "patterns": "",
    "settings": {
      "hideSuggested": false,
    },
  },
  "results": [
    {
      "hide": {
        "kind": "nothing",
      },
      "testCase": {
        "suggested": true,
        "text": "Normal content",
      },
    },
  ],
}
`;

exports[`PatternEngine settings integration should prioritize pattern matching over settings checks 1`] = `
{
  "engine": {
    "patterns": "!allowed",
    "settings": {
      "hideSuggested": true,
    },
  },
  "results": [
    {
      "hide": {
        "kind": "show",
        "reason": "Matches pattern: allowed",
      },
      "testCase": {
        "suggested": true,
        "text": "This is allowed content",
      },
    },
  ],
}
`;

exports[`PatternEngine text normalization should normalize curly double quotes to straight quotes 1`] = `
{
  "engine": {
    "patterns": ""quoted"",
    "settings": {},
  },
  "results": [
    {
      "hide": {
        "kind": "hide",
        "reason": "Matches pattern: "quoted"",
      },
      "testCase": {
        "text": "This is “quoted” text",
      },
    },
    {
      "hide": {
        "kind": "hide",
        "reason": "Matches pattern: "quoted"",
      },
      "testCase": {
        "text": "This is "quoted" text",
      },
    },
  ],
}
`;

exports[`PatternEngine text normalization should normalize curly single quotes to straight quotes 1`] = `
{
  "engine": {
    "patterns": "don't",
    "settings": {},
  },
  "results": [
    {
      "hide": {
        "kind": "hide",
        "reason": "Matches pattern: don't",
      },
      "testCase": {
        "text": "don‘t do this",
      },
    },
    {
      "hide": {
        "kind": "hide",
        "reason": "Matches pattern: don't",
      },
      "testCase": {
        "text": "don’t do this",
      },
    },
    {
      "hide": {
        "kind": "hide",
        "reason": "Matches pattern: don't",
      },
      "testCase": {
        "text": "don't do this",
      },
    },
  ],
}
`;
